--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,6 +1,38 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  name: redis
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: redis
+  template:
+    metadata:
+      labels:
+        app: redis
+    spec:
+      containers:
+      - name: redis
+        image: redis:latest
+        ports:
+        - containerPort: 6379
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: redis-service
+spec:
+  selector:
+    app: redis
+  ports:
+    - protocol: TCP
+      port: 6379
+      targetPort: 6379
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
   name: codeswitch-ai
 spec:
   replicas: 1
@@ -14,7 +46,15 @@ spec:
     spec:
       containers:
       - name: codeswitch-ai
-        image: 340752818167.dkr.ecr.eu-north-1.amazonaws.com/codeswitch-ai:latest
-        imagePullPolicy: Always
+        image: codeswitch-ai:latest
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
+        env:
+        - name: CLAUDE_API_KEY
+          valueFrom:
+            secretKeyRef:
+              name: codeswitch-secrets
+              key: claude-api-key
+        - name: REDIS_URL
+          value: "redis://redis-service:6379"
