--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: redis
+  namespace: codeswitch
 spec:
   replicas: 1
   selector:
@@ -22,6 +23,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: redis-service
+  namespace: codeswitch
 spec:
   selector:
     app: redis
@@ -33,23 +35,85 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: codeswitch-ai
+  name: rabbitmq
+  namespace: codeswitch
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: codeswitch-ai
+      app: rabbitmq
   template:
     metadata:
       labels:
-        app: codeswitch-ai
+        app: rabbitmq
     spec:
       containers:
-      - name: codeswitch-ai
-        image: codeswitch-ai:latest
-        imagePullPolicy: IfNotPresent
+      - name: rabbitmq
+        image: rabbitmq:3-management
         ports:
-        - containerPort: 8080
+        - containerPort: 5672
+        - containerPort: 15672
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: rabbitmq-service
+  namespace: codeswitch
+spec:
+  selector:
+    app: rabbitmq
+  ports:
+    - name: amqp
+      port: 5672
+      targetPort: 5672
+    - name: management
+      port: 15672
+      targetPort: 15672
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: frequency-calculator
+  namespace: codeswitch
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: frequency-calculator
+  template:
+    metadata:
+      labels:
+        app: frequency-calculator
+    spec:
+      containers:
+      - name: frequency-calculator
+        image: codeswitch-ai:latest
+        imagePullPolicy: Never
+        command: ["./frequency-calculator"]
+        env:
+        - name: REDIS_URL
+          value: "redis://redis-service:6379"
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: processor
+  namespace: codeswitch
+spec:
+  replicas: 5
+  selector:
+    matchLabels:
+      app: processor
+  template:
+    metadata:
+      labels:
+        app: processor
+    spec:
+      containers:
+      - name: processor
+        image: codeswitch-ai:latest
+        imagePullPolicy: Never
+        command: ["./processor"]
         env:
         - name: CLAUDE_API_KEY
           valueFrom:
@@ -58,3 +122,59 @@ spec:
               key: claude-api-key
         - name: REDIS_URL
           value: "redis://redis-service:6379"
+        - name: RABBITMQ_URL
+          value: "amqp://rabbitmq-service:5672"
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: gateway
+  namespace: codeswitch
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: gateway
+  template:
+    metadata:
+      labels:
+        app: gateway
+    spec:
+      containers:
+      - name: gateway
+        image: codeswitch-ai:latest
+        imagePullPolicy: Never
+        command: ["./gateway"]
+        ports:
+        - containerPort: 8080
+        env:
+        - name: REDIS_URL
+          value: "redis://redis-service:6379"
+        - name: RABBITMQ_URL
+          value: "amqp://rabbitmq-service:5672"
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: result-collector
+  namespace: codeswitch
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: result-collector
+  template:
+    metadata:
+      labels:
+        app: result-collector
+    spec:
+      containers:
+      - name: result-collector
+        image: codeswitch-ai:latest
+        imagePullPolicy: Never
+        command: ["./result-collector"]
+        env:
+        - name: REDIS_URL
+          value: "redis://redis-service:6379"
+        - name: RABBITMQ_URL
+          value: "amqp://rabbitmq-service:5672"
