--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,12 +1,27 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: codeswitch-ai
+  name: frequency-calculator
+  namespace: codeswitch
 spec:
   selector:
-    app: codeswitch-ai
+    app: frequency-calculator
   ports:
     - protocol: TCP
       port: 8080
       targetPort: 8080
-  type: LoadBalancer
+  type: ClusterIP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: processor
+  namespace: codeswitch
+spec:
+  selector:
+    app: processor
+  ports:
+    - protocol: TCP
+      port: 8080
+      targetPort: 8080
+  type: ClusterIP
